# deadeye-template

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  custom_pipeline.cpp  custom_pipeline.h  docker-compose.yml  main.cpp  pipeline.cpp  pipeline.hpp
src/: custom_pipeline.cpp  custom_pipeline.h  custom_target_data.cpp  custom_target_data.h
